--- a/blockshare/templates/profile.html
+++ b/blockshare/templates/profile.html
@@ -2,7 +2,8 @@
 <html>
 <title>Blockshare</title>
 <head>
-    <script src="/static/jquery/dist/jquery.js"></script> 
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <!--<script src="/static/jquery/dist/jquery.js"></script>--> 
     <script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">-->
@@ -58,7 +59,7 @@ $(function(){
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-left">
                 <li>
-                  <a class="page-scroll" href="/app/address/">Blockshare.IO</a></li>
+                  <a class="page-scroll" href="/">Blockshare.IO</a></li>
               </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -84,7 +85,7 @@ $(function(){
 <header>
     <div class="header-content-inner"><br /><br /><br /><br />
      <div><h1 class="text-center">
-     <img src="/static/not_img/rect.svg" style="width=auto; height=auto; max-width: 100px; max-height: 150px">Blockshare.IO</img></h1>
+     <img src="/static/img/rect.svg" style="width=auto; height=auto; max-width: 100px; max-height: 150px">Blockshare.IO</img></h1>
      </div>
       <div class="col-lg-12">
         <style>
@@ -95,7 +96,7 @@ $(function(){
           }
         </style>
         <div class="container text-center" style="margin-top: 0px">
-          <form class="form-signin" id="login_form" method="post" action="/app/address/">
+          <form class="form-signin" id="login_form" method="post" action="/">
             
                         
             {% csrf_token %}
